--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
@@ -1,11 +1,13 @@
 ---
-description: Get started quickly with pre-deployed models running in GPU TEE with OpenAI-compatible interface.
-title: Use API
+description: Get started quickly with pre-deployed models running in GPU TEE with OpenAI-compatible interface. Pay per request.
+title: On-demand API
 ---
 
 ## Overview
 
-Confidential AI API provides a secure, OpenAI-compatible interface for running AI models in TEE on GPU hardware. This enables developers to integrate AI applications with hardware-level privacy protection, ensuring user data remain confidential during inference. Browse [available confidential AI models](https://phala.com/confidential-ai-models) for your application.
+On-demand Confidential AI API provides a secure, OpenAI-compatible interface for running AI models in TEE on GPU hardware. Pay per request with no infrastructure management. This enables developers to integrate AI applications with hardware-level privacy protection, ensuring user data remain confidential during inference. Browse [available confidential AI models](https://phala.com/confidential-ai-models) for your application.
+
+For dedicated GPU resources with hourly pricing, see [Dedicated Models](/phala-cloud/confidential-ai/confidential-gpu/model-template).
 
 
 ## Prerequisites
