--- a/network/overview/get-pha-and-transfer.mdx
+++ b/network/overview/get-pha-and-transfer.mdx
@@ -46,6 +46,7 @@ Below are the *official and only valid* contract addresses:
 |-------|------------------|
 | **PHA (ERC20)** | `0x6c5bA91642F10282b576d91922Ae6448C9d52f4E` |
 | **vPHA (ERC20)** | `0x21d6eC8fc14CaAcc55aFA23cBa66798DAB3a0ec0` |
+| **PHA Claim Contract** | `0x8b6d7AB0BE8d1f6AE40738C4CFF75134110a777F` |
 
 ### **Phala L2 Contracts**
 
